@@ -448,6 +448,7 @@ All:
 - Added wxTranslations class to allow localization without changing locale.
 - Added wxResourceTranslationsLoader for loading translations from Windows
   resources.
+- Added wxMessageQueue::Clear().
 
 Unix:
 
